codespan-reporting/tests/snapshots/term__note_with_labels__short_color.snap
---
source: codespan-reporting/tests/term.rs
expression: TEST_DATA.emit_color(&config)
---
one_line.rs:1:1: {fg:Red bold bright}error{bold bright}: cycle detected when evaluating constant `A`{/}

