codespan-reporting/tests/snapshots/term__note_with_labels__short_no_color.snap
---
source: codespan-reporting/tests/term.rs
expression: TEST_DATA.emit_no_color(&config)
---
one_line.rs:1:1: error: cycle detected when evaluating constant `A`

